# fastapi-opinionated-eventbus

./: README.md  pyproject.toml
fastapi_opinionated_eventbus/: helpers.py  plugin.py
